--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
           driver-class-name: com.mysql.jdbc.Driver
           url: jdbc:mysql://127.0.0.1:3306/chemical_rfid?serverTimezone=Asia/Shanghai&characterEncoding=utf8&useSSL=false&allowMultiQueries=true
           username: root
-          password: 12345678
+          password: 123456
         slave_1:
           username: fsm
           password: Nju123456
@@ -37,7 +37,8 @@ spring:
       additional-paths: src/main/java
   mvc:
     static-path-pattern: /static/**
-
+    async:
+      request-timeout: 5000
 # 配置mybatis
 mybatis:
   mapper-locations: classpath*:/dao/**Dao.xml
@@ -49,5 +50,8 @@ pagehelper:
   reasonable: true
   supportMethodsArguments: true
   params: count=countSql
+
+
+
 
 
